# investment-claude

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  DASHBOARD_TEST.md  README.md  coverage.xml  package-lock.json  package.json  permission-prompt-design.html  pyproject.toml  pytest.ini  requirements-dev.txt  test-browser.ts  test-permissions.sh  tool-display-design-v2.html  tool-display-design.html  tsconfig.json  tui-complete-design.html  tui-redesign.html  大纲.md
.pi/: CRON.json  PROMPT_OPTIMIZATION_SUMMARY.md  dashboard-config.json  decision-log.md
blog/: loop大纲.md  streaming-tool-execution-spec.md
docs/: CI_SETUP.md  CODE_QUALITY.md  PROJECT_PLAN.md  QUANT-AGENT-GUIDE.md  QUANT-MIGRATION.md  QUANT_ENTERPRISE_ASSESSMENT.md  USAGE.md  akshare-api-status-2026-05-16.md  akshare-fix-2026-05-16.md  flexible-agent-plan.md  implementation-plan.md  markdown-table-rendering-2026-05-14.md  permission-persistence-fix.md  permission-persistence-issue.md  permissions-persistence.md  pi-investment-analysis.md  prompt-concatenation-fix-2026-05-16.md  prompt-optimization-2026-05-14.md  roadmap.md  screen-stocks-alternative-solution.md  screen-stocks-implementation-2026-05-16.md  semi-auto-trading-system.md  simple-implementation-plan.md  tool-execution-fixes-2026-05-14.md  tool-testing-guide.md  tools-roadmap.md  tui-visual-improvements-feasibility.md
management/: backlog.md  dashboard.md  phase1-completion-report.md  progress-report-day1-final.md  progress-report-day1.md  progress-report-day2-final.md  progress-report-day2.md
(+643 files in other folders)
